# ReflowController

./: .clang-tidy  CMakeLists.txt  README.md
ReflowApp/: CMakeLists.txt  main.cpp
ReflowApp/ReflowAppLib/: CMakeLists.txt
ReflowApp/ReflowAppTest/: CMakeLists.txt  main.cpp  tst_Persistence.h
ReflowController/: .CMakeLists.txt.swp  CMakeLists.txt  SerialCommandHandler.cpp  SerialCommandHandler.h  SerialPortController.cpp  SerialPortController.h
ReflowController/ReflowControllerTest/: CMakeLists.txt  main.cpp  tst_SerialConnection.h
ReflowData/: CMakeLists.txt  ProfileConfigData.cpp  ProfileConfigData.h  ProfileMeasureData.cpp  ProfileMeasureData.h  ProfileSolderData.cpp  ProfileSolderData.h
ReflowData/ReflowDataTest/: CMakeLists.txt  main.cpp  tst_ProfileConfigData.h  tst_ProfileMeasureData.h  tst_ProfileSolderData.h  tst_SerialConnection.h
docs/arch/: ReflowController.adoc
docs/arch/images/: ReflowDiagram.drawio
docs/arch/plantuml/: BuildingBlockL1.plantuml
docs/arch/src/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_system_scope_and_context.adoc
